examples/test/testpolicy9830.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9830
  namespace: namespace18
spec:
  podSelector:
    matchLabels:
      key31: value24
      key38: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key24: value23
          key17: value37
      podSelector:
        matchLabels:
          key40: value4
          key45: value24
          key29: value15
